--- a/views/layouts/login.hbs
+++ b/views/layouts/login.hbs
@@ -109,17 +109,8 @@
 
             <div class="row">
                 <div class="col s12 m4">
-                    <div class="card" style="overflow: visible;">
-                        <div class="card-image waves-effect waves-block waves-light">
-                            <img class="activator" src="images/stairs_before.JPG">
-                        </div>
-                        <div class="card-content">
-                            <span class="card-title activator grey-text text-darken-4">After<i class="fas fa-angle-double-up"></i></span>
-                        </div>
-                        <div class="card-reveal">
-                            <span class="card-title grey-text text-darken-4">Stairs After<i class="material-icons right">close</i></span>
-                            <img src="images/stairs_after.JPG">
-                        </div>
+                    <div class="cardtest">
+
                     </div>
                 </div>
             </div>
