--- a/public/css/style.css
+++ b/public/css/style.css
@@ -34,8 +34,8 @@ p{
   
 .container-painting{
     margin-top: 100px;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    display: grid | inline-grid;
+    /* grid-template-columns: repeat(3, 1fr); */
     grid-column-gap: 25px;
     grid-row-gap: 25px;
 }
@@ -47,14 +47,4 @@ p{
 
 .page-footer{
     color: black;
-}
-
-.cardtest {
-    width: 130px;
-    height: 195px;
-    background: url("images/stairs_after.JPG") no-repeat;
-    display: inline-block;
-}
-.cardtest:hover {
-    background: url("images/stairs_before.JPG") no-repeat;
 }
