--- a/views/layouts/login.hbs
+++ b/views/layouts/login.hbs
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="stylesheet" href="/css/style.css">
@@ -26,14 +27,14 @@
                 <div class="col s12 m4">
                     <div class="card" style="overflow: visible;">
                         <div class="card-image waves-effect waves-block waves-light">
-                            <img class="activator" src="images/roof_before.JPG">
+                            <img class="activator" src="images/roof_after.JPG">
                         </div>
                         <div class="card-content">
-                            <span class="card-title activator grey-text text-darken-4">After<i class="fas fa-angle-double-up"></i></span>
+                            <span class="card-title activator grey-text text-darken-4"></span>
                         </div>
                         <div class="card-reveal">
-                            <span class="card-title grey-text text-darken-4">Roof After<i class="material-icons right">close</i></span>
-                            <img src="images/roof_after.JPG">
+                            <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i></span>
+                            <img src="images/roof_before.JPG">
                         </div>
                     </div>
                 </div>
@@ -43,74 +44,15 @@
                 <div class="col s12 m4">
                     <div class="card" style="overflow: visible;">
                         <div class="card-image waves-effect waves-block waves-light">
-                            <img class="activator" src="images/stairs_before.JPG">
+                            <img class="activator" src="images/stairs_after.JPG">
                         </div>
                         <div class="card-content">
-                            <span class="card-title activator grey-text text-darken-4">After<i class="fas fa-angle-double-up"></i></span>
+                            <span class="card-title activator grey-text text-darken-4"></span>
                         </div>
                         <div class="card-reveal">
-                            <span class="card-title grey-text text-darken-4">Stairs After<i class="material-icons right">close</i></span>
-                            <img src="images/stairs_after.JPG">
+                            <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i></span>
+                            <img src="images/stairs_before.JPG">
                         </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col s12 m4">
-                    <div class="card" style="overflow: visible;">
-                        <div class="card-image waves-effect waves-block waves-light">
-                            <img class="activator" src="images/roof_before.JPG">
-                        </div>
-                        <div class="card-content">
-                            <span class="card-title activator grey-text text-darken-4">After<i class="fas fa-angle-double-up"></i></span>
-                        </div>
-                        <div class="card-reveal">
-                            <span class="card-title grey-text text-darken-4">Roof After<i class="material-icons right">close</i></span>
-                            <img src="images/roof_after.JPG">
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col s12 m4">
-                    <div class="card" style="overflow: visible;">
-                        <div class="card-image waves-effect waves-block waves-light">
-                            <img class="activator" src="images/stairs_before.JPG">
-                        </div>
-                        <div class="card-content">
-                            <span class="card-title activator grey-text text-darken-4">After<i class="fas fa-angle-double-up"></i></span>
-                        </div>
-                        <div class="card-reveal">
-                            <span class="card-title grey-text text-darken-4">Stairs After<i class="material-icons right">close</i></span>
-                            <img src="images/stairs_after.JPG">
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col s12 m4">
-                    <div class="card" style="overflow: visible;">
-                        <div class="card-image waves-effect waves-block waves-light">
-                            <img class="activator" src="images/roof_before.JPG">
-                        </div>
-                        <div class="card-content">
-                            <span class="card-title activator grey-text text-darken-4">After<i class="fas fa-angle-double-up"></i></span>
-                        </div>
-                        <div class="card-reveal">
-                            <span class="card-title grey-text text-darken-4">Roof After<i class="material-icons right">close</i></span>
-                            <img src="images/roof_after.JPG">
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col s12 m4">
-                    <div class="cardtest">
-
                     </div>
                 </div>
             </div>
@@ -120,8 +62,7 @@
           <div class="container">
             <div class="row">
               <div class="col l6 s12">
-                <h5>Footer Content</h5>
-                <p >You can use rows and columns here to organize your footer content.</p>
+                <h5><i class="fas fa-brush"></i> Barnes Painting And Decorating</h5>
               </div>
               <div class="col l4 offset-l2 s12">
                 <h5 >Contact Us</h5>
@@ -136,7 +77,7 @@
           </div>
           <div class="footer-copyright grey darken-3 white-text">
             <div class="container">
-            © 2014 Copyright Strafinity LLC
+            © 2021 Copyright Strafinity LLC
             </div>
           </div>
         </footer>
