--- a/views/partials/_header.hbs
+++ b/views/partials/_header.hbs
@@ -1,16 +1,21 @@
-<nav class="grey darken-3 white-text">
-    <div class="nav-wrapper container">
+<ul id="slide-out" class="sidenav">
+    <li>
+        <div class="user-view">
+            <div class="background">
+                <img src="images/paintroll.jpg">
+            </div>
+            <a href="#user"><img class="circle" src="images/melvin4.png"></a>
+            <a href="#name"><span class="white-text name">Melvin Barnes</span></a>
+            <a href="#email"><span class="white-text email">melvinbarnes314@gmail.com</span></a>
+        </div>
+    </li>
+    <li><div class="divider"></div></li>
+    <li><a class="waves-effect" href="/stories"><i class="fas fa-info-circle"></i>About</a></li>
+    <li><a class="waves-effect" href="/dashboard"><i class="fas fa-tachometer-alt"></i>Dashboard</a></li>
+    <li><a class="waves-effect" href="/gallery"><i class="fas fa-palette"></i>Gallery</a></li>
+    <li><a class="waves-effect" href="/gallery"><i class="fas fa-calculator"></i>Free Estimate</a></li>
+    <li><a class="waves-effect" href="/auth/logout"><i class="fas fa-sign-out-alt"></i>Logout</a></li>
+</ul>
 
-        <a href="#!" class="brand-logo center"><i class="fas fa-brush"></i>Barnes Painting</a>
-        <a href="#" data-target="mobile-demo" class="sidenav-trigger show-on-large">
-            <i class="fas fa-bars"></i></a>
+<a href="#" class="sidenav-trigger waves-effect grey darken-3 waves-light btn" data-target="slide-out"><i class="material-icons">menu</i></a>
 
-       <ul class="sidenav" id="mobile-demo">
-           <li><a href="/stories"><i class="fas fa-info-circle"></i>About</a></li>
-           <li><a href="/dashboard"><i class="fas fa-tachometer-alt"></i>Dashboard</a></li>
-           <li><a href="/gallery"><i class="fas fa-palette"></i>Gallery</a></li>
-           <li><a href="/gallery"><i class="fas fa-calculator"></i>Free Estimate</a></li>
-           <li><a href="/auth/logout"><i class="fas fa-sign-out-alt"></i>Logout</a></li>
-       </ul>
-    </div>
-</nav>
