--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -1,3 +1,4 @@
 <h6>Dashboard</h6>
 <h3>Welcome {{ name }}</h3>
-<p>Gallery Coming Soon</p>
+<h1>Page Under Construction!!</h1>
+<p>Added functionality coming soon.</p>
