--- a/views/partials/_header.hbs
+++ b/views/partials/_header.hbs
@@ -10,10 +10,10 @@
         </div>
     </li>
     <li><div class="divider"></div></li>
-    <li><a class="waves-effect" href="/stories"><i class="fas fa-info-circle"></i>About</a></li>
-    <li><a class="waves-effect" href="/dashboard"><i class="fas fa-tachometer-alt"></i>Dashboard</a></li>
-    <li><a class="waves-effect" href="/gallery"><i class="fas fa-palette"></i>Gallery</a></li>
-    <li><a class="waves-effect" href="/gallery"><i class="fas fa-calculator"></i>Free Estimate</a></li>
+    <li><a class="waves-effect" href="#"><i class="fas fa-info-circle"></i>About</a></li>
+    <li><a class="waves-effect" href="#"><i class="fas fa-tachometer-alt"></i>Dashboard</a></li>
+    <li><a class="waves-effect" href="#"><i class="fas fa-palette"></i>Gallery</a></li>
+    <li><a class="waves-effect" href="#"><i class="fas fa-calculator"></i>Free Estimate</a></li>
     <li><a class="waves-effect" href="/auth/logout"><i class="fas fa-sign-out-alt"></i>Logout</a></li>
 </ul>
 
